News
====

Pyclewn 2.1
-----------

.. March 30, 2015

New features
^^^^^^^^^^^^

* Full gdb completion is now available on Vim command line. See
  ``:help gdb-completion``.

* The console and the Pyclewn buffers are loaded in windows of a dedicated tab
  page when the ``--window`` option is set to ``usetab``. See
  ``help pyclewn-usetab``.

Changes
^^^^^^^

* Add the new vim.ping() function to check whether an existing Python process
  may be attached to.

* No windows are created when the ``--window`` option is set to ``none``.

Bug fixes
^^^^^^^^^

* Issue #6: Fix the crash in Pyclewn versions 2.0 and 2.0.1 when trying to
  attach to a remote gdb.

* Retrieving the installation vimball does not require anymore setuptools.

* Issue #12: Prevent Pyclewn from running with an obsolete version of its Vim
  run time files.

* Issue #13: Fix the error messages after ``:Pyclewn pdb`` failure.

* Issue #14: tmux can be used now with the ``terminal`` option, e.g.
  ``--terminal=tmux,split-window``.

* Issue #15: The clewn buffers are now emptied after the 'Cquit' command.

* Issue #18: Create the windows layout upon starting Pyclewn. The windows
  layout is still created upon the first command instead when Pyclewn is
  started with ``python -m clewn --window=usetab``.

* Issue #19: Vim signs are placed now in the window of a buffer loaded before
  the debugging session instead of using the current window.

* Issue #17: Improve the window/buffer management of Pyclewn.

Pyclewn 2.0.1
-------------

.. March 1st, 2015

Bug fixes
^^^^^^^^^

* The ``:Pyclewn`` command can now be used reliably in a Vim script.

* The watchpoints are also displayed in the breakpoints window.

* The ``Cquit`` command does not start a new gdb session anymore.

* The list buffer windows are now empty after the ``Cquit`` command.

* The source distribution can be built when pdb-clone is missing.

Pyclewn 2.0
-----------

.. February 9, 2015

New features
^^^^^^^^^^^^
