@@ -167,6 +167,7 @@ class Simple(ClewnTestCase):
             'disable -- Disable one breakpoint.',
             'dumprepr -- Print debugging information on netbeans and the debugger.',
             'enable -- Enable one breakpoint.',
+            'exitclewn -- Close the debugging session.',
             'help -- Print help on the simple commands.',
             'interrupt -- Interrupt the execution of the debugged program.',
             'loglevel -- Get or set the pyclewn log level.',
@@ -301,6 +302,7 @@ class Simple(ClewnTestCase):
             'disable -- Disable one breakpoint.',
             'dumprepr -- Print debugging information on netbeans and the debugger.',
             'enable -- Enable one breakpoint.',
+            'exitclewn -- Close the debugging session.',
             'help -- Print help on the simple commands.',
             'interrupt -- Interrupt the execution of the debugged program.',
             'loglevel -- Get or set the pyclewn log level.',
